--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Power Life - PM Sports</title>
+
+  <!-- CSS: Arquivo de estilos -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
+
+  <!-- HERO / TOPO -->
   <div class="hero">
     <h1>Shorts Power Life</h1>
     <p>Curtinho, estiloso e com tecnologia Dry Fit.<br>Ideal para treino, corrida ou até um rolê na praia.</p>
@@ -16,7 +19,10 @@
     </a>
   </div>
 
+  <!-- CONTEÚDO PRINCIPAL -->
   <div class="container">
+
+    <!-- GALERIA DE PRODUTOS -->
     <h2 class="section-title">Galeria de Produtos</h2>
     <div class="gallery">
       <img src="assets/images/img1.jpg" alt="Shorts Powerlife 1" />
@@ -25,6 +31,7 @@
       <img src="assets/images/img4.jpg" alt="Shorts Powerlife 4" />
     </div>
 
+    <!-- BENEFÍCIOS -->
     <h2 class="section-title">Tecnologia e Conforto no Seu Treino</h2>
     <div class="benefits">
       <div class="benefit">Dry Fit: evaporação rápida do suor</div>
@@ -35,6 +42,7 @@
       <div class="benefit">Estilo Retrô: shape moderno e marcante</div>
     </div>
 
+    <!-- OFERTAS -->
     <h2 class="section-title">Ofertas Especiais</h2>
     <div class="card">
       <h3>45% OFF</h3>
@@ -47,6 +55,7 @@
       <a href="https://wa.me/5511964331277" target="_blank"><button class="button">Comprar</button></a>
     </div>
 
+    <!-- FAQ -->
     <h2 class="section-title">Dúvidas Frequentes</h2>
     <div class="faq">
       <h4>Posso devolver o produto se não servir?</h4>
@@ -60,13 +69,18 @@
     </div>
   </div>
 
+  <!-- RODAPÉ -->
   <div class="footer">
     <p>Políticas de Privacidade | Termos de Uso</p>
     <p>Todos os direitos reservados - Desenvolvido por PM Sports</p>
   </div>
 
+  <!-- BOTÃO FLUTUANTE WHATSAPP -->
   <a href="https://wa.me/5511964331277" target="_blank" class="whatsapp">
     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
   </a>
+
+  <!-- JAVASCRIPT -->
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
